--- a/client/App.scss
+++ b/client/App.scss
@@ -12,5 +12,46 @@
 
   > main {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap:10px;
   }
+
+  #creditCardField{
+    font-size: 2em;
+    padding: 0.5em;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    color:transparent;
+    background-color: transparent;
+    box-sizing: border-box;
+    outline: none;
+  }
+
+
+  .textInputHolder{
+    border: 2px solid;
+    border-radius: 0.25em;
+    position: relative;
+    display: flex;
+    width:25em;
+  }
+
+  .formatted_credit_card_value{
+    font-size: 2em;
+    width:100%;
+    height: 100%;
+    padding: 0.5em;
+    border: 2px solid;
+    text-align: center;
+    color:black;
+    line-height: 2.5rem;
+  }
+
 }
